--- a/index.html
+++ b/index.html
@@ -10,18 +10,77 @@
 <header style="font-family:fantasy; font-size: larger;">Kay Finds</header>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="what'snew.html">What's New</a></li>
-<li><a href="trendingstyles.html">Trending Styles</a></li>
-<li><a href="musthaves.html">Must Haves</a></li>
-<li><a href="newfinds.html">New Finds</a></li>
-<li><a href="stylingtips.html">Styling Tips</a></li>
-<li><a href="fashioninspo.html">Fashion Inspo</a></li>
+<li><a href="index.html">HOME</a></li>
+<li><a href="what'snew.html">WHAT'S NEW</a></li>
+<li><a href="trendingstyles.html">TRENDING STYLES</a></li>
+<li><a href="musthaves.html">MUST HAVES</a></li>
+<li><a href="newfinds.html">NEW FINDS</a></li>
+<li><a href="stylingtips.html">STYLING TIPS</a></li>
+<li><a href="contact.html">CONTACT</a></li>
 </ul>
 </nav>
-<p class="right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur condimentum condimentum eros, at eleifend magna ultrices vel. Curabitur hendrerit justo non quam ullamcorper fermentum. Morbi id aliquam metus. Duis mauris sapien, volutpat malesuada pulvinar ac, molestie non ante. Suspendisse condimentum ex a metus egestas, sollicitudin luctus nulla laoreet.Ut posuere arcu in leo tempus tempus. Quisque pharetra lacus a velit malesuada porta. Cras et interdum massa. Fusce faucibus magna quis mollis pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut enim diam, ultrices ac erat molestie, ornare imperdiet orci. Vivamus dictum, sapien non pulvinar blandit, libero dui pharetra felis, vitae semper velit elit sit amet dui. Quisque iaculis placerat augue sed aliquam. Proin tincidunt pretium risus eget iaculis. Nulla facilisi. Phasellus et urna leo. Nulla et nisl sit amet enim malesuada volutpat vitae at metus. Suspendisse vitae varius erat. Morbi tellus ante, vestibulum ac tristique eu, iaculis at sem. Suspendisse iaculis est ipsum, vel tincidunt magna dignissim at. Quisque consequat elit sit amet nunc consectetur, at pellentesque metus aliquet.Fusce at fermentum elit. Fusce ultrices massa eu metus ullamcorper, eget pretium urna sagittis. Donec gravida justo vel erat rhoncus blandit. Phasellus magna enim, pulvinar et enim vitae, hendrerit placerat nisl. Pellentesque eget justo id magna ultrices sagittis. Etiam molestie aliquam lectus, vel sollicitudin massa ultrices feugiat. Duis dolor odio, tincidunt in justo id, tempus euismod nunc. Nulla consequat nibh dignissim ipsum vehicula eleifend. Sed rutrum et tortor nec tincidunt.Suspendisse pellentesque ut mi non lobortis. Integer pellentesque accumsan felis, a pretium est tincidunt et. Praesent rhoncus, metus quis semper luctus, quam ante efficitur eros, sed semper enim enim ut nisl. Curabitur neque turpis, dignissim sit amet interdum nec, consectetur nec odio. Aliquam nec sapien porta, imperdiet risus nec, faucibus nunc. Vestibulum mi magna, eleifend vel faucibus at, viverra non nibh. Ut quis magna arcu. Sed placerat nulla nec facilisis luctus. Quisque efficitur, felis vel pretium facilisis, lorem turpis venenatis turpis, eget elementum est sem vestibulum sapien. Proin et elementum libero. Vivamus nec rutrum nunc. Donec id ex augue. Nam in cursus ex. In sodales auctor mauris, sed pretium elit dignissim vel.Cras pellentesque mauris vel dolor vehicula consectetur. Praesent molestie tortor non vulputate posuere. Curabitur diam purus, vulputate quis sapien egestas, commodo tristique neque. Maecenas nec magna laoreet nibh ornare fermentum sed laoreet nibh. Maecenas condimentum ligula tortor, nec gravida diam suscipit sit amet. Fusce a mollis augue. Aliquam eleifend, magna in vestibulum finibus, lorem purus dictum lacus, in sagittis risus purus quis nisi. Nam non vulputate velit, ac lacinia dui. In ac ipsum non purus iaculis faucibus. In hac habitasse platea dictumst. Ut imperdiet, est at tincidunt imperdiet, mi metus egestas tellus, at accumsan arcu enim at nunc. Nullam blandit euismod mattis. In in nunc ac elit hendrerit aliquam. Integer efficitur vehicula maximus. Vivamus imperdiet et dui ut suscipit. Nulla non rhoncus mauris, iaculis aliquam lorem.</p>
+<div class="container">
+    <div class="image">
 <img src="images/catwalk-1840941__480.jpg">
+    </div>
+    <div class="text">
+<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur condimentum condimentum eros, at eleifend magna ultrices vel. Curabitur hendrerit justo non quam ullamcorper fermentum. Morbi id aliquam metus. Duis mauris sapien, volutpat malesuada pulvinar ac, molestie non ante. Suspendisse condimentum ex a metus egestas, sollicitudin luctus nulla laoreet.Ut posuere arcu in leo tempus tempus. Quisque pharetra lacus a velit malesuada porta. Cras et interdum massa. Fusce faucibus magna quis mollis pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut enim diam, ultrices ac erat molestie, ornare imperdiet orci. Vivamus dictum, sapien non pulvinar blandit, libero dui pharetra felis, vitae semper velit elit sit amet dui.</p>
+    </div>
+</div>
+<div class="container">
+    <div class="image">
 <img src="images/clothing-3987617__480.jpg">
+</div>
+<div class="text">
+<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur condimentum condimentum eros, at eleifend magna ultrices vel. Curabitur hendrerit justo non quam ullamcorper fermentum. Morbi id aliquam metus. Duis mauris sapien, volutpat malesuada pulvinar ac, molestie non ante. Suspendisse condimentum ex a metus egestas, sollicitudin luctus nulla laoreet.Ut posuere arcu in leo tempus tempus. Quisque pharetra lacus a velit malesuada porta. Cras et interdum massa. Fusce faucibus magna quis mollis pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut enim diam, ultrices ac erat molestie, ornare imperdiet orci. Vivamus dictum, sapien non pulvinar blandit, libero dui pharetra felis, vitae semper velit elit sit amet dui.</p>
+</div>
+</div>
+<div class="container">
+    <div class="image">
 <img src="images/floating-1845571__480.jpg">
+</div>
+<div class="text">
+<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur condimentum condimentum eros, at eleifend magna ultrices vel. Curabitur hendrerit justo non quam ullamcorper fermentum. Morbi id aliquam metus. Duis mauris sapien, volutpat malesuada pulvinar ac, molestie non ante. Suspendisse condimentum ex a metus egestas, sollicitudin luctus nulla laoreet.Ut posuere arcu in leo tempus tempus. Quisque pharetra lacus a velit malesuada porta. Cras et interdum massa. Fusce faucibus magna quis mollis pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut enim diam, ultrices ac erat molestie, ornare imperdiet orci. Vivamus dictum, sapien non pulvinar blandit, libero dui pharetra felis, vitae semper velit elit sit amet dui.</p>
+</div>
+</div>
+<footer>
+<p>Instagram   Twitter    Pinterest</p>
+<!-- Section: Form -->
+<section class="">
+    <form action="">
+      <!--Grid row-->
+      <div class="row d-flex justify-content-center">
+        <!--Grid column-->
+        <div class="col-auto">
+          <p class="pt-2">
+            <strong>Sign up for updates</strong>
+          </p>
+        </div>
+        <!--Grid column-->
+                  <!--Grid column-->
+                  <div class="col-md-5 col-12">
+                    <!-- Email input -->
+                    <div class="form-outline form-white mb-4">
+                      <input type="email" id="form5Example21" class="form-control" />
+                      <label class="form-label" for="form5Example21">Email address</label>
+                    </div>
+                  </div>
+                  <!--Grid column-->
+        
+                  <!--Grid column-->
+                  <div class="col-auto">
+                    <!-- Submit button -->
+                    <button type="submit" class="btn btn-outline-light mb-4">
+                      Subscribe
+                    </button>
+                  </div>
+                  <!--Grid column-->
+                </div>
+                <!--Grid row-->
+              </form>
+            </section>
+            <!-- Section: Form -->
+        
+    </footer>
 </body>
 </html>
