--- a/musthaves.html
+++ b/musthaves.html
@@ -10,14 +10,89 @@
 <header style="font-family:fantasy; font-size: larger;">Kay Finds</header>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="what'snew.html">What's New</a></li>
-<li><a href="trendingstyles.html">Trending Styles</a></li>
-<li><a href="musthaves.html">Must Haves</a></li>
-<li><a href="newfinds.html">New Finds</a></li>
-<li><a href="stylingtips.html">Styling Tips</a></li>
-<li><a href="fashioninspo.html">Fashion Inspo</a></li>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="what'snew.html">WHAT'S NEW</a></li>
+    <li><a href="trendingstyles.html">TRENDING STYLES</a></li>
+    <li><a href="musthaves.html">MUST HAVES</a></li>
+    <li><a href="newfinds.html">NEW FINDS</a></li>
+    <li><a href="stylingtips.html">STYLING TIPS</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </nav>
+<div class="row"> 
+    <div class="column">
+      <img src="images/blueacc.webp">
+      <img src="images/elevator.webp">
+      <img src="images/gridmodel.webp">
+      <img src="images/nike-5126389__480.jpg">
+      <img src="images/maleintense.webp">
+      <img src="images/leathercoat.webp">
+      <img src="images/brightnike.webp">
+    </div>
+    <div class="column">
+      <img src="images/modelleather.webp">
+      <img src="images/redacc.webp">
+      <img src="images/yellowsweats.webp">
+      <img src="images/whiteplatforms.webp">
+    <img src="images/whiteshades.webp">
+      <img src="images/sweaterdress.webp">
+    </div> 
+    <div class="column">
+        <img src="images/silverboots.webp">
+        <img src="images/vest.webp">
+        <img src="images/prints.webp">
+        <img src="images/elegance.webp">
+        <img src="images/bodyjewelry.webp">
+        <img src="images/red.webp">
+        <img src="images/bluedress.webp">
+      </div>
+      <div class="column">
+        <img src="images/pinkfur.webp">
+        <img src="images/shadesbob.webp">
+        <img src="images/cpurse.webp">
+        <img src="images/purpleshades.webp">
+        <img src="images/greypurse.webp">
+        <img src="images/sandals.webp">
+      </div>
+    </div>
+    <footer>
+        <p>Instagram   Twitter    Pinterest</p>
+        <!-- Section: Form -->
+        <section class="">
+            <form action="">
+              <!--Grid row-->
+              <div class="row d-flex justify-content-center">
+                <!--Grid column-->
+                <div class="col-auto">
+                  <p class="pt-2">
+                    <strong>Sign up for updates</strong>
+                  </p>
+                </div>
+                <!--Grid column-->
+                          <!--Grid column-->
+                          <div class="col-md-5 col-12">
+                            <!-- Email input -->
+                            <div class="form-outline form-white mb-4">
+                              <input type="email" id="form5Example21" class="form-control" />
+                              <label class="form-label" for="form5Example21">Email address</label>
+                            </div>
+                          </div>
+                          <!--Grid column-->
+                
+                          <!--Grid column-->
+                          <div class="col-auto">
+                            <!-- Submit button -->
+                            <button type="submit" class="btn btn-outline-light mb-4">
+                              Subscribe
+                            </button>
+                          </div>
+                          <!--Grid column-->
+                        </div>
+                        <!--Grid row-->
+                      </form>
+                    </section>
+                    <!-- Section: Form -->
+                
+            </footer>
 </body>
 </html>
