--- a/newfinds.html
+++ b/newfinds.html
@@ -10,14 +10,55 @@
 <header style="font-family:fantasy; font-size: larger;">Kay Finds</header>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="what'snew.html">What's New</a></li>
-<li><a href="trendingstyles.html">Trending Styles</a></li>
-<li><a href="musthaves.html">Must Haves</a></li>
-<li><a href="newfinds.html">New Finds</a></li>
-<li><a href="stylingtips.html">Styling Tips</a></li>
-<li><a href="fashioninspo.html">Fashion Inspo</a></li>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="what'snew.html">WHAT'S NEW</a></li>
+    <li><a href="trendingstyles.html">TRENDING STYLES</a></li>
+    <li><a href="musthaves.html">MUST HAVES</a></li>
+    <li><a href="newfinds.html">NEW FINDS</a></li>
+    <li><a href="stylingtips.html">STYLING TIPS</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </nav>
+<img src="images/ponytail.webp">
+<img src="images/neon.webp">
+<footer>
+    <p>Instagram   Twitter    Pinterest</p>
+    <!-- Section: Form -->
+    <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for updates</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+                      <!--Grid column-->
+                      <div class="col-md-5 col-12">
+                        <!-- Email input -->
+                        <div class="form-outline form-white mb-4">
+                          <input type="email" id="form5Example21" class="form-control" />
+                          <label class="form-label" for="form5Example21">Email address</label>
+                        </div>
+                      </div>
+                      <!--Grid column-->
+            
+                      <!--Grid column-->
+                      <div class="col-auto">
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-outline-light mb-4">
+                          Subscribe
+                        </button>
+                      </div>
+                      <!--Grid column-->
+                    </div>
+                    <!--Grid row-->
+                  </form>
+                </section>
+                <!-- Section: Form -->
+            
+        </footer>
 </body>
 </html>
