--- a/stylingtips.html
+++ b/stylingtips.html
@@ -10,14 +10,56 @@
 <header style="font-family:fantasy; font-size: larger;">Kay Finds</header>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="what'snew.html">What's New</a></li>
-<li><a href="trendingstyles.html">Trending Styles</a></li>
-<li><a href="musthaves.html">Must Haves</a></li>
-<li><a href="newfinds.html">New Finds</a></li>
-<li><a href="stylingtips.html">Styling Tips</a></li>
-<li><a href="fashioninspo.html">Fashion Inspo</a></li>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="what'snew.html">WHAT'S NEW</a></li>
+    <li><a href="trendingstyles.html">TRENDING STYLES</a></li>
+    <li><a href="musthaves.html">MUST HAVES</a></li>
+    <li><a href="newfinds.html">NEW FINDS</a></li>
+    <li><a href="stylingtips.html">STYLING TIPS</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </nav>
+<h1>STYLING TIPS</h1>
+<img src="images/intensesuit.webp">
+<p style="font-weight: normal;">Nulla condimentum massa ac cursus ultrices. Nam mi justo, hendrerit a suscipit et, mattis sed justo. Morbi fermentum neque in nisl dapibus, maximus molestie nulla imperdiet. Nulla facilisi. Maecenas id turpis eu arcu lobortis cursus ac sed elit. Vivamus suscipit scelerisque justo, quis lobortis erat facilisis non. Ut pellentesque vel ligula quis viverra. Etiam sed laoreet augue, sit amet sollicitudin enim. Morbi egestas consequat metus id viverra. Maecenas efficitur metus nec convallis commodo. Nunc pretium nulla quis ipsum laoreet rutrum. Proin in ex varius, efficitur enim sed, porttitor enim. Nullam mollis ultrices leo, non dignissim felis facilisis nec. Sed felis ante, fringilla in gravida aliquam, eleifend in lacus.</p>
+<footer>
+    <p>Instagram   Twitter    Pinterest</p>
+    <!-- Section: Form -->
+    <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for updates</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+                      <!--Grid column-->
+                      <div class="col-md-5 col-12">
+                        <!-- Email input -->
+                        <div class="form-outline form-white mb-4">
+                          <input type="email" id="form5Example21" class="form-control" />
+                          <label class="form-label" for="form5Example21">Email address</label>
+                        </div>
+                      </div>
+                      <!--Grid column-->
+            
+                      <!--Grid column-->
+                      <div class="col-auto">
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-outline-light mb-4">
+                          Subscribe
+                        </button>
+                      </div>
+                      <!--Grid column-->
+                    </div>
+                    <!--Grid row-->
+                  </form>
+                </section>
+                <!-- Section: Form -->
+            
+        </footer>
 </body>
 </html>
