--- a/trendingstyles.html
+++ b/trendingstyles.html
@@ -10,19 +10,58 @@
 <header style="font-family:fantasy; font-size: larger;">Kay Finds</header>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="what'snew.html">What's New</a></li>
-<li><a href="trendingstyles.html">Trending Styles</a></li>
-<li><a href="musthaves.html">Must Haves</a></li>
-<li><a href="newfinds.html">New Finds</a></li>
-<li><a href="stylingtips.html">Styling Tips</a></li>
-<li><a href="fashioninspo.html">Fashion Inspo</a></li>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="what'snew.html">WHAT'S NEW</a></li>
+    <li><a href="trendingstyles.html">TRENDING STYLES</a></li>
+    <li><a href="musthaves.html">MUST HAVES</a></li>
+    <li><a href="newfinds.html">NEW FINDS</a></li>
+    <li><a href="stylingtips.html">STYLING TIPS</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </nav>
-<h1>Trending Styles</h1>
+<h1>TRENDING STYLES</h1>
 <img src="images/photo-1539109136881-3be0616acf4b.webp">
 <img src="images/photo-1581044777550-4cfa60707c03.webp">
 <img src="images/photo-1588117260148-b47818741c74.webp">
-<p> Etiam eros leo, vulputate sit amet erat sed, volutpat convallis tortor. Suspendisse ac rhoncus mauris. Aliquam ut nisl ac erat rutrum faucibus. Praesent placerat vel mauris sed fringilla. Suspendisse ultrices, purus ac efficitur vestibulum, tortor felis eleifend felis, eget rutrum arcu augue vel magna. Quisque vitae massa erat. Quisque porttitor, leo ac ornare rutrum, tellus quam scelerisque neque, vel tincidunt lacus ligula vitae purus. Vivamus id dui varius, sagittis sem quis, mollis diam. Suspendisse potenti. Pellentesque aliquet est sit amet nunc facilisis, a ultricies est aliquet. Fusce diam mi, fringilla in malesuada ac, luctus facilisis turpis. Proin bibendum neque rhoncus urna malesuada euismod. Proin imperdiet eleifend risus sit amet tincidunt. Pellentesque sagittis tellus hendrerit dignissim tempor.</p>
+<p style="font-weight: normal;">Etiam eros leo, vulputate sit amet erat sed, volutpat convallis tortor. Suspendisse ac rhoncus mauris. Aliquam ut nisl ac erat rutrum faucibus. Praesent placerat vel mauris sed fringilla. Suspendisse ultrices, purus ac efficitur vestibulum, tortor felis eleifend felis, eget rutrum arcu augue vel magna. Quisque vitae massa erat. Quisque porttitor, leo ac ornare rutrum, tellus quam scelerisque neque, vel tincidunt lacus ligula vitae purus. Vivamus id dui varius, sagittis sem quis, mollis diam. Suspendisse potenti. Pellentesque aliquet est sit amet nunc facilisis, a ultricies est aliquet. Fusce diam mi, fringilla in malesuada ac, luctus facilisis turpis. Proin bibendum neque rhoncus urna malesuada euismod. Proin imperdiet eleifend risus sit amet tincidunt. Pellentesque sagittis tellus hendrerit dignissim tempor.</p>
+<footer>
+    <p>Instagram   Twitter    Pinterest</p>
+    <!-- Section: Form -->
+    <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for updates</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+                      <!--Grid column-->
+                      <div class="col-md-5 col-12">
+                        <!-- Email input -->
+                        <div class="form-outline form-white mb-4">
+                          <input type="email" id="form5Example21" class="form-control" />
+                          <label class="form-label" for="form5Example21">Email address</label>
+                        </div>
+                      </div>
+                      <!--Grid column-->
+            
+                      <!--Grid column-->
+                      <div class="col-auto">
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-outline-light mb-4">
+                          Subscribe
+                        </button>
+                      </div>
+                      <!--Grid column-->
+                    </div>
+                    <!--Grid row-->
+                  </form>
+                </section>
+                <!-- Section: Form -->
+            
+        </footer>
 </body>
 </html>
