--- a/what'snew.html
+++ b/what'snew.html
@@ -10,17 +10,56 @@
 <header style="font-family:fantasy; font-size: larger;">Kay Finds</header>
 <nav>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="what'snew.html">What's New</a></li>
-<li><a href="trendingstyles.html">Trending Styles</a></li>
-<li><a href="musthaves.html">Must Haves</a></li>
-<li><a href="newfinds.html">New Finds</a></li>
-<li><a href="stylingtips.html">Styling Tips</a></li>
-<li><a href="fashioninspo.html">Fashion Inspo</a></li>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="what'snew.html">WHAT'S NEW</a></li>
+    <li><a href="trendingstyles.html">TRENDING STYLES</a></li>
+    <li><a href="musthaves.html">MUST HAVES</a></li>
+    <li><a href="newfinds.html">NEW FINDS</a></li>
+    <li><a href="stylingtips.html">STYLING TIPS</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </nav>
-<h1>What's New</h1>
+<h1>WHAT'S NEW</h1>
 <img src="images/woman-6496881__480.jpg">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam arcu lacus, egestas in odio vitae, hendrerit placerat ante. Ut quam neque, ullamcorper sit amet sem vehicula, faucibus pulvinar ex. Proin elit ligula, rhoncus a rutrum at, malesuada at lacus. Suspendisse et dignissim massa, et fringilla felis. Aliquam feugiat scelerisque magna, non dictum nisi vestibulum a. Curabitur tortor enim, luctus non tincidunt et, euismod at neque. Aenean leo magna, pellentesque at metus auctor, vulputate tristique lacus. Aenean non elit sed purus pellentesque luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+<p style="font-weight: normal;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam arcu lacus, egestas in odio vitae, hendrerit placerat ante. Ut quam neque, ullamcorper sit amet sem vehicula, faucibus pulvinar ex. Proin elit ligula, rhoncus a rutrum at, malesuada at lacus. Suspendisse et dignissim massa, et fringilla felis. Aliquam feugiat scelerisque magna, non dictum nisi vestibulum a. Curabitur tortor enim, luctus non tincidunt et, euismod at neque. Aenean leo magna, pellentesque at metus auctor, vulputate tristique lacus. Aenean non elit sed purus pellentesque luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+<footer>
+    <p>Instagram   Twitter    Pinterest</p>
+    <!-- Section: Form -->
+    <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for updates</strong>
+              </p>
+            </div>
+            <!--Grid column-->
+                      <!--Grid column-->
+                      <div class="col-md-5 col-12">
+                        <!-- Email input -->
+                        <div class="form-outline form-white mb-4">
+                          <input type="email" id="form5Example21" class="form-control" />
+                          <label class="form-label" for="form5Example21">Email address</label>
+                        </div>
+                      </div>
+                      <!--Grid column-->
+            
+                      <!--Grid column-->
+                      <div class="col-auto">
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-outline-light mb-4">
+                          Subscribe
+                        </button>
+                      </div>
+                      <!--Grid column-->
+                    </div>
+                    <!--Grid row-->
+                  </form>
+                </section>
+                <!-- Section: Form -->
+            
+        </footer>
 </body>
 </html>
